<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:background="@android:color/transparent" >

    <LinearLayout
        android:id="@+id/ll_group_members_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_solid"
        android:gravity="center_vertical" >

        <RadioGroup
            android:id="@+id/set_dialog_cycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp" >

            <RadioButton
                android:id="@+id/set_cycle_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:button="@null"
                android:checked="true"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/cycle_everydar"
                android:textColor="#333333" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cdcdcd" />

            <RadioButton
                android:id="@+id/set_cycle_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:button="@null"
                android:checked="true"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/cycle_onetime"
                android:textColor="#333333" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cdcdcd" />

            <RadioButton
                android:id="@+id/set_cycle_self"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:button="@null"
                android:checked="true"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/cycle_myself"
                android:textColor="#333333" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>