<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="#f4f4f4"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:background="#00000000"
                android:text="@string/set_dialog_title"
                android:textColor="#b32317"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#cdcdcd" />

        <LinearLayout
            android:id="@+id/ll_group_members_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <RadioGroup
                android:id="@+id/setting_dialog_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <RadioButton
                    android:id="@+id/setting_up_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:button="@null"
                    android:checked="true"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:text="@string/set_up_volume"
                    android:textColor="#333333" />

                <RadioButton
                    android:id="@+id/setting_down_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:button="@null"
                    android:checked="true"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:text="@string/set_down_volume"
                    android:textColor="#333333" />
            </RadioGroup>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#cdcdcd" />

        <LinearLayout
            android:id="@+id/ll_group_members_give"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="取消"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>